typing and benedictions

--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ html {
 .card.m label {
   background-color: #a02334;
 }
-.card.s label {
+.card.b label {
   background-color: #96ceb4;
 }
 .card.t p {
