--- a/styles.css
+++ b/styles.css
@@ -12,31 +12,71 @@ html {
 }
 
 .card {
+  background-color: transparent;
   height: 200px;
   width: 130px;
-  background: white;
-  border-radius: 8px;
-  transition: all 0.3s;
-  cursor: pointer;
   margin: 0 16px;
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+}
+
+.card .inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+.card.hidden .inner {
+  transform: rotateY(180deg);
+}
+
+.card.locked .front {
+  border: 1px solid red;
+}
+
+.card .front,
+.card .back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.card .front {
+  background-color: white;
+  color: black;
+  border-radius: 8px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   overflow: hidden;
+  cursor: pointer;
+  transition: all 0.3s;
   box-shadow:
     rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
     rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
-.card label {
+
+.card .front:hover {
+  box-shadow:
+    rgba(50, 50, 93, 0.25) 0px 30px 60px -12px,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+}
+
+.card .front label {
   width: 100%;
   text-align: center;
   padding: 8px;
   background: grey;
   color: white;
+  cursor: pointer;
 }
 
-.card p {
+.card .front p {
   width: 100%;
   text-align: center;
   padding: 8px;
@@ -47,22 +87,26 @@ html {
   align-items: center;
   background: beige;
   font-size: 12px;
+  cursor: pointer;
 }
-
-.card.m label {
+.card .front.m label {
   background-color: #a02334;
 }
-.card.b label {
+.card .front.b label {
   background-color: #96ceb4;
 }
-.card.t p {
+.card .front.t p {
   font-size: 16px;
 }
 
-.card:hover {
+.card .back {
+  background-color: #ffad60;
+  color: white;
+  transform: rotateY(180deg);
+  border-radius: 8px;
   box-shadow:
-    rgba(50, 50, 93, 0.25) 0px 30px 60px -12px,
-    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+    rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 
 #hand {
@@ -154,4 +198,31 @@ html {
 }
 #badEnd {
   color: red;
+}
+
+#malediction {
+  position: fixed;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 100%;
+  bottom: 0;
+  width: 100%;
+  z-index: 100;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+button {
+  border: none;
+  border-radius: 8px;
+  padding: 16px 32px;
+  text-transform: uppercase;
+  background: brown;
+  color: white;
+  margin-top: 16px;
+  cursor: pointer;
 }
