--- a/styles.css
+++ b/styles.css
@@ -28,13 +28,18 @@ html {
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
 }
 
 #scene label {
+  display: block;
+  position: absolute;
   color: white;
   font-size: 24px;
   transition: opacity 0.3s;
+  width: 30%;
+  bottom: 50%;
+  text-align: center;
 }
 
 #floor {
@@ -50,7 +55,7 @@ html {
 
 #ghost {
   position: absolute;
-  left: calc(50% - (208px / 2) - 16px);
+  left: calc(32% - (208px / 2) - 16px);
   height: 400px;
   width: 208px;
   bottom: 100%;
