--- a/styles.css
+++ b/styles.css
@@ -23,13 +23,14 @@ html {
 * {
   box-sizing: border-box;
   font-family: 'Courier New', monospace;
+  image-rendering: pixelated;
 }
 
 #scene {
   position: relative;
   height: 100%;
   width: 100%;
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: space-around;
 }
@@ -147,6 +148,8 @@ html {
 }
 #menu h1 {
   font-size: 4rem;
+  text-transform: uppercase;
+  margin-bottom: 0;
 }
 
 #menu p {
@@ -217,7 +220,6 @@ html {
   position: absolute;
   width: 100%;
   height: 100%;
-  -webkit-backface-visibility: hidden; /* Safari */
   backface-visibility: hidden;
 }
 
