--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
 :root {
-  --bg: #111; /*#342840;*/
+  --bg: #101b26; /*#342840;*/
   --red: #b3515e;
   --green: #8db962;
   --gold: #9b7d4b;
-  --cardHeight: 
+  --deathRatio: 67/127; 
+  --ghostRatio: 39/121; 
+  --scytheRatio: 129/93; 
 }
 
 body,
@@ -67,63 +69,59 @@ html {
   position: absolute;
   left: calc(32% - (13rem / 2) - 1rem);
   height: 25rem;
-  width: 13rem;
-  bottom: 100%;
+  width: calc(25rem * var(--ghostRatio));
+  bottom: calc(100% + 2rem);
   background-image: url('/assets/ghost.webp');
   background-size: cover;
   transition: all 0.5s;
   animation: float 4s infinite;
 }
 
-@keyframes fall {
-  0% {
-    top: -25rem;
-  }
-  30% {
-    top: calc(50% - (25rem / 2) - 1rem);
-  }
-  70% {
-    top: calc(50% - (25rem / 2) - 1rem);
-  }
-  100% {
-    top: calc(100% - 25rem - 1rem);
-  }
-}
-
 #death {
   position: absolute;
   right: -31.25rem;
-  bottom: 1rem;
+  bottom: 2rem;
   height: 23rem;
-  width: 25.1732rem;
+  width: calc(23rem * var(--deathRatio));
   transition: right 1s linear;
+  animation: float 4s .1s infinite;
 }
 
 #death::before {
   position: absolute;
   content: '';
-  right: 0;
-  bottom: 0;
-  height: 100%;
-  width: 100%;
+  left: -4rem;
+  bottom: 2rem;
+  height: 20rem;
+  width: calc(20rem * var(--scytheRatio));
   background-image: url('/assets/scythe.webp');
   background-size: cover;
   z-index: 200;
-  animation: float 4s infinite;
+  animation: float 4s .3s infinite;
 }
 
 @keyframes float {
   0% {
-    margin-bottom: 0;
+    transform: translate3d(0,0,0);
   }
   50% {
-    margin-bottom: 1rem;
+    transform: translate3d(0,1rem,0);
   }
   100% {
-    margin-bottom: 0;
+    transform: translate3d(0,0,0);
   }
 }
-
+@keyframes flippedFloat {
+  0% {
+    transform: translate3d(0,0,0) scaleX(-1);
+  }
+  50% {
+    transform: translate3d(0,1rem,0) scaleX(-1);
+  }
+  100% {
+    transform: translate3d(0,0,0) scaleX(-1);
+  }
+}
 #death:after {
   position: absolute;
   content: '';
