--- a/styles.css
+++ b/styles.css
@@ -367,9 +367,32 @@ button {
   margin-top: 1rem;
   cursor: pointer;
   font-size: 1.5rem;
-  transition: all 0.3s;
+  transition: background-color 0.3s;
 }
 
 button:hover {
   background: rgb(185, 47, 47);
+}
+
+#mute {
+  background: transparent;
+  position: fixed;
+  z-index: 9999;
+  top: 1rem;
+  left: 1rem;
+  height: 4rem;
+  width: 4rem;
+  margin: 0;
+  border-radius: 50%;
+  background-image: url('/assets/sound.webp');
+  background-size: cover;
+  background-position: 0%;
+}
+
+#mute.off {
+  background-position: 100%;
+}
+
+#mute:hover {
+  background-color: rgba(255,255,255, 0.1);
 }
