--- a/styles.css
+++ b/styles.css
@@ -190,8 +190,10 @@ html {
   z-index: 200;
 }
 
-#menu {
+#popup {
   display: none;
+  position: absolute;
+  z-index: 999;
   color: white;
   display: flex;
   flex-direction: column;
@@ -370,23 +372,6 @@ h1 {
   transition: opacity 0.3s;
 }
 
-#goodEnd,
-#badEnd {
-  position: absolute;
-  background: rgba(0, 0, 0, 0.8);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  top: 0;
-  left: 100%;
-  bottom: 0;
-  width: 100%;
-  z-index: 100;
-  opacity: 0;
-  transition: opacity 0.3s;
-}
-
 #malediction {
   position: absolute;
   z-index: 98;
@@ -409,7 +394,8 @@ h1 {
   margin-top: 20%;
 }
 
-button {
+#popup button,
+#malediction button {
   border: none;
   border-radius: 0.5rem;
   padding: 1rem 2rem;
@@ -422,13 +408,15 @@ button {
   transition: background-color 0.3s;
 }
 
-button:hover {
+#popup button:hover,
+#malediction button:hover {
   background: rgb(185, 47, 47);
 }
 
 #mute {
   background: transparent;
   position: fixed;
+  display: none;
   z-index: 9999;
   top: 1rem;
   left: 1rem;
@@ -439,6 +427,7 @@ button:hover {
   background-image: url('/assets/sound.webp');
   background-size: 200% 100%;
   background-position: 0%;
+  border: none;
 }
 
 #mute.off {
