--- a/styles.css
+++ b/styles.css
@@ -253,6 +253,7 @@ h1 {
     top 0.8s,
     left 0.8s,
     transform 0.2s;
+  cursor: pointer;
 }
 
 .card .inner {
@@ -263,12 +264,15 @@ h1 {
   transition: transform 0.8s;
   transform-style: preserve-3d;
 }
+
 .card.hidden .inner {
   transform: rotateY(180deg);
 }
 
-.card.locked .front {
-  cursor: pointer;
+.card.locked,
+.card.discarded,
+.card.b.hidden {
+  cursor: default;
 }
 
 .card.locked .front::after {
@@ -297,7 +301,6 @@ h1 {
   justify-content: space-between;
   align-items: center;
   overflow: hidden;
-  cursor: pointer;
   font-weight: bold;
   transition: all 0.3s;
 }
